Draggable angle points implemented, fixed the angle tool, added the angle tool for the outer angle, fixed the cropped video.

--- a/style.css
+++ b/style.css
@@ -385,7 +385,7 @@ h2 {
 #video-container {
   position: relative;
   width: 100%;
-  max-height: 60vh;
+  max-height: 60%;
   background-color: #e9ecef;
   border-radius: 8px;
   overflow: hidden;
@@ -404,13 +404,13 @@ h2 {
 
 /* Video element */
 #video {
-  position: relative;
-  top: 0;
-  left: 0;
-  width: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: auto;
   height: auto;
   max-width: 100%;
-  max-height: 70vh; /*60 vh*/
+  max-height: 100%; /*60 vh*/
   display: none; /*block*/
   border-radius: 4px;
   object-fit: contain;
